--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "homepage": "https://github.com/volmir/binary-tree",    
     "autoload": {
         "psr-4": {
-            "PVV\\": "/src/"
+            "PVV\\": "src/"
         }
     }
 }
